syntax = "proto3";

package GameMaster;

// The game list service definition.
service GameLister {
  // gets a game list
  rpc GetGameList (GameListRequest) returns (GameListReply) {}
}

// the request for a player's games
message GameListRequest {
  string player = 1;
}

// a game item
message GameItem {
  string Id = 1;
  string OpponentId = 2;
  bool ReadyToPlay = 3;
  bool PlayMade = 4;
  bool GameOver = 5;
  repeated RoundItem Rounds = 6;
  string PlayerId = 7;
}

// a round item
message RoundItem {
  string PlayerShape = 1;
  string OpponentShape = 2;
  string Summary = 3;
  bool PlayerWins = 4;
  bool Completed = 5;
}

// response message containing the game list
message GameListReply {
  repeated GameItem games = 1;
}
